--- a/templates/weather_forecast/index.html.twig
+++ b/templates/weather_forecast/index.html.twig
@@ -33,8 +33,12 @@
                 <td>{{ weather_forecast.pressure }}</td>
                 <td>{{ weather_forecast.date ? weather_forecast.date|date('Y-m-d') : '' }}</td>
                 <td>
-                    <a href="{{ path('app_weather_forecast_show', {'id': weather_forecast.id}) }}">show</a>
-                    <a href="{{ path('app_weather_forecast_edit', {'id': weather_forecast.id}) }}">edit</a>
+                    {% if is_granted("ROLE_WEATHER_FORECAST_SHOW") %}
+                        <a href="{{ path('app_weather_forecast_show', {'id': weather_forecast.id}) }}">show</a>
+                    {% endif %}
+                    {% if is_granted("ROLE_WEATHER_FORECAST_EDIT") %}
+                        <a href="{{ path('app_weather_forecast_edit', {'id': weather_forecast.id}) }}">edit</a>
+                    {% endif %}
                 </td>
             </tr>
         {% else %}
@@ -44,6 +48,7 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('app_weather_forecast_new') }}">Create new</a>
+    {% if is_granted("ROLE_WEATHER_FORECAST_NEW") %}
+        <a href="{{ path('app_weather_forecast_new') }}">Create new</a>
+    {% endif %}
 {% endblock %}
