--- a/templates/weather_forecast/show.html.twig
+++ b/templates/weather_forecast/show.html.twig
@@ -46,9 +46,14 @@
         </tbody>
     </table>
 
+
     <a href="{{ path('app_weather_forecast_index') }}">back to list</a>
 
-    <a href="{{ path('app_weather_forecast_edit', {'id': weather_forecast.id}) }}">edit</a>
+    {% if is_granted('ROLE_WEATHER_FORECAST_EDIT') %}
+        <a href="{{ path('app_weather_forecast_edit', {'id': weather_forecast.id}) }}">edit</a>
+    {% endif %}
 
-    {{ include('weather_forecast/_delete_form.html.twig') }}
+    {% if is_granted('ROLE_WEATHER_FORECAST_DELETE') %}
+        {{ include('weather_forecast/_delete_form.html.twig') }}
+    {% endif %}
 {% endblock %}
